Adding .drone.yml file

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,4 +1,5 @@
 pipeline:
-  image: hashicorp/packer:light
   build_image:
-    - packer build aws/ami.json
+    image: hashicorp/packer:light
+    commands:
+      - packer build aws/ami.json
